--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@splinetool/react-spline": "^2.2.1",
     "@splinetool/runtime": "^0.9.310",
     "framer-motion": "^10.12.4",
