--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-ticker": "^2.1.1",
     "react-router-dom": "^6.6.1",
     "three": "^0.152.1"
   },
