--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splinetool/react-spline": "^2.2.1",
     "@splinetool/runtime": "^0.9.310",
     "framer-motion": "^10.12.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-ticker": "^2.1.1",
@@ -20,6 +21,7 @@
     "three": "^0.152.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/three": "^0.150.2",
