--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -17,10 +17,10 @@ jobs:
       run: npm run build
 
     - name: "[FRONTEND] 🚀 Deploy"
-      uses: appleboy/scp-action@v0.1.4
+      uses: garygrossgarten/github-action-scp@v0.8.0
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        source: ${{ secrets.SOURCE }}
-        target: ${{ secrets.TARGET }}
+        local: ${{ secrets.SOURCE }}
+        remote: ${{ secrets.TARGET }}
